Fixed menu overflow from too many options; Increased menu withd by 20px;

--- a/src/styles.css
+++ b/src/styles.css
@@ -135,9 +135,9 @@ ul {
   display: flex;
   flex-direction: column;
   top: 60px;
-  width: 150px;
-  right: -150px;
-  height: 100%;
+  width: 170px;
+  right: -170px;
+  height: calc(100vh - 60px);
   margin: 0;
   padding: 0;
   list-style: none;
@@ -145,6 +145,7 @@ ul {
   transition: 0.3s;
   box-sizing: border-box;
   border-top: 1px solid gray;
+  overflow: scroll;
 }
 
 .expandMenu {
